[gd_scene load_steps=19 format=3 uid="uid://b2nhvvmhj12rm"]

[ext_resource type="Theme" uid="uid://hfu11ujnk2ky" path="res://ui/theme.tres" id="1_8jteq"]
[ext_resource type="Script" path="res://ui/startup_window.gd" id="1_550dq"]
[ext_resource type="Texture2D" uid="uid://dqg5avwj64xtj" path="res://assets/images/startup_image.png" id="2_uioem"]
[ext_resource type="Texture2D" uid="uid://b6xejb3u0f0gj" path="res://assets/icon.png" id="3_mhmm1"]
[ext_resource type="FontFile" uid="uid://jnjfo4ffpto4" path="res://assets/fonts/urw_gothic/URWGothic-Book.ttf" id="4_0qpip"]
[ext_resource type="Texture2D" uid="uid://cof2m8ndly0d2" path="res://assets/icons/close.png" id="5_5n6wl"]
[ext_resource type="LabelSettings" uid="uid://1r7ne35kh7qj" path="res://ui/label_settings_title.tres" id="6_1mxij"]
[ext_resource type="Texture2D" uid="uid://crgccvvmkmqw4" path="res://assets/icons/note_add.png" id="7_jlk2r"]
[ext_resource type="Texture2D" uid="uid://bvqu2s4fu24x4" path="res://assets/icons/folder_open.png" id="9_6lj1m"]
[ext_resource type="Texture2D" uid="uid://c6hmmy1slx5nx" path="res://assets/icons/support.png" id="10_jr08l"]
[ext_resource type="LabelSettings" uid="uid://pk4i87lufyv4" path="res://ui/label_settings_popup.tres" id="11_23pnl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7mil"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="Animation" id="Animation_423xi"]
resource_name = "hide_exit_button"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBox/WelcomeImage/ExitButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0387v"]
resource_name = "show_exit_button"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBox/WelcomeImage/ExitButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kl4yl"]
_data = {
"hide_exit_button": SubResource("Animation_423xi"),
"show_exit_button": SubResource("Animation_0387v")
}

[sub_resource type="LabelSettings" id="LabelSettings_2ym5m"]
font_size = 9

[sub_resource type="LabelSettings" id="LabelSettings_3568g"]
font = ExtResource("4_0qpip")
font_size = 60

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0tus"]
content_margin_left = 5.0

[node name="StartupWindow" type="PanelContainer"]
clip_children = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8jteq")
theme_override_styles/panel = SubResource("StyleBoxFlat_p7mil")
script = ExtResource("1_550dq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kl4yl")
}

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="WelcomeImage" type="TextureRect" parent="VBox"]
custom_minimum_size = Vector2(0, 270)
layout_mode = 2
texture = ExtResource("2_uioem")
expand_mode = 2
stretch_mode = 5

[node name="EditorButton" type="TextureButton" parent="VBox/WelcomeImage"]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 59.0
offset_bottom = 59.0
texture_normal = ExtResource("3_mhmm1")
ignore_texture_size = true
stretch_mode = 4

[node name="ImageCreditLabel" type="RichTextLabel" parent="VBox/WelcomeImage"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -17.0
offset_right = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/default_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.137255)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/italics_font_size = 9
bbcode_enabled = true
text = "[right][i]Image by [url=https://unsplash.com/photos/u27Rrbs9Dwc]Clay Banks via Unsplash[/url][/i][/right]"

[node name="VersionLabel" type="Label" parent="VBox/WelcomeImage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -18.0
offset_right = 217.0
grow_vertical = 0
text = "0.0.0-alpha"
label_settings = SubResource("LabelSettings_2ym5m")

[node name="GoZenLabel" type="Label" parent="VBox/WelcomeImage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GoZen"
label_settings = SubResource("LabelSettings_3568g")

[node name="ExitButton" type="TextureButton" parent="VBox/WelcomeImage"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
texture_normal = ExtResource("5_5n6wl")
ignore_texture_size = true
stretch_mode = 5

[node name="Margin" type="MarginContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 14

[node name="HBox" type="HBoxContainer" parent="VBox/Margin"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="LeftVBox" type="VBoxContainer" parent="VBox/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewTitleLabel" type="Label" parent="VBox/Margin/HBox/LeftVBox"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_n0tus")
text = "TITLE_NEW_PROJECT"
label_settings = ExtResource("6_1mxij")

[node name="VBox" type="VBoxContainer" parent="VBox/Margin/HBox/LeftVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="NewHorizontalFHDButton" type="Button" parent="VBox/Margin/HBox/LeftVBox/VBox"]
layout_mode = 2
text = "BUTTON_NEW_HORIZONTAL_FHD_PROJECT"
icon = ExtResource("7_jlk2r")
alignment = 0

[node name="NewVerticalFHDButton" type="Button" parent="VBox/Margin/HBox/LeftVBox/VBox"]
layout_mode = 2
text = "BUTTON_NEW_VERTICAL_FHD_PROJECT"
icon = ExtResource("7_jlk2r")
alignment = 0

[node name="NewHorizontal4KButton" type="Button" parent="VBox/Margin/HBox/LeftVBox/VBox"]
layout_mode = 2
text = "BUTTON_NEW_HORIZONTAL_4K_PROJECT"
icon = ExtResource("7_jlk2r")
alignment = 0

[node name="NewVertical4KButton" type="Button" parent="VBox/Margin/HBox/LeftVBox/VBox"]
layout_mode = 2
text = "BUTTON_NEW_VERTICAL_4K_PROJECT"
icon = ExtResource("7_jlk2r")
alignment = 0

[node name="HSeparator" type="HSeparator" parent="VBox/Margin/HBox/LeftVBox/VBox"]
layout_mode = 2

[node name="NewCustomButton" type="Button" parent="VBox/Margin/HBox/LeftVBox/VBox"]
layout_mode = 2
text = "BUTTON_NEW_CUSTOM_PROJECT"
icon = ExtResource("7_jlk2r")
alignment = 0

[node name="OpenProjectButton" type="Button" parent="VBox/Margin/HBox/LeftVBox"]
layout_mode = 2
text = "BUTTON_OPEN_PROJECT"
icon = ExtResource("9_6lj1m")
alignment = 0

[node name="RightVBox" type="VBoxContainer" parent="VBox/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RecentTitleLabel" type="Label" parent="VBox/Margin/HBox/RightVBox"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_n0tus")
text = "TITLE_RECENT_PROJECTS"
label_settings = ExtResource("6_1mxij")

[node name="RecentProjectsVBox" type="VBoxContainer" parent="VBox/Margin/HBox/RightVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SupportProjectButton" type="Button" parent="VBox/Margin/HBox/RightVBox"]
layout_mode = 2
text = "BUTTON_SUPPORT_PROJECT"
icon = ExtResource("10_jr08l")
alignment = 0

[node name="NewCustomWindow" type="Window" parent="."]
title = "POPUP_CUSTOM_PROJECT_TITLE"
initial_position = 4
size = Vector2i(400, 110)
visible = false
unresizable = true
theme_override_icons/close = ExtResource("5_5n6wl")

[node name="Margin" type="MarginContainer" parent="NewCustomWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 7

[node name="VBox" type="VBoxContainer" parent="NewCustomWindow/Margin"]
layout_mode = 2
size_flags_vertical = 4

[node name="Grid" type="GridContainer" parent="NewCustomWindow/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="TitleLabel" type="Label" parent="NewCustomWindow/Margin/VBox/Grid"]
layout_mode = 2
text = "POPUP_CUSTOM_PROJECT_NAME"
label_settings = ExtResource("11_23pnl")

[node name="NewProjectTitleLineEdit" type="LineEdit" parent="NewCustomWindow/Margin/VBox/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SizeLabel" type="Label" parent="NewCustomWindow/Margin/VBox/Grid"]
layout_mode = 2
text = "POPUP_CUSTOM_PROJECT_SIZE"
label_settings = ExtResource("11_23pnl")

[node name="SizeHBox" type="HBoxContainer" parent="NewCustomWindow/Margin/VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XSpinBox" type="SpinBox" parent="NewCustomWindow/Margin/VBox/Grid/SizeHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "POPUP_CUSTOM_PROJECT_TOOLTIP_X"
min_value = 1.0
max_value = 50000.0
value = 1920.0
allow_greater = true

[node name="YSpinBox" type="SpinBox" parent="NewCustomWindow/Margin/VBox/Grid/SizeHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "POPUP_CUSTOM_PROJECT_TOOLTIP_Y"
min_value = 1.0
max_value = 50000.0
value = 1080.0
allow_greater = true

[node name="ButtonHBox" type="HBoxContainer" parent="NewCustomWindow/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="NewCustomWindow/Margin/VBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "POPUP_CUSTOM_PROJECT_BUTTON_CANCEL"

[node name="ConfirmButton" type="Button" parent="NewCustomWindow/Margin/VBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "POPUP_CUSTOM_PROJECT_BUTTON_OK"

[connection signal="pressed" from="VBox/WelcomeImage/EditorButton" to="." method="_on_editor_button_pressed"]
[connection signal="meta_clicked" from="VBox/WelcomeImage/ImageCreditLabel" to="." method="_on_image_credit_label_meta_clicked"]
[connection signal="mouse_entered" from="VBox/WelcomeImage/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBox/WelcomeImage/ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="VBox/WelcomeImage/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBox/Margin/HBox/LeftVBox/VBox/NewCustomButton" to="." method="_on_new_custom_button_pressed"]
[connection signal="pressed" from="VBox/Margin/HBox/LeftVBox/OpenProjectButton" to="." method="_on_open_project_button_pressed"]
[connection signal="pressed" from="VBox/Margin/HBox/RightVBox/SupportProjectButton" to="." method="_on_support_project_button_pressed"]
[connection signal="pressed" from="NewCustomWindow/Margin/VBox/ButtonHBox/CancelButton" to="." method="_on_new_custom_cancel_button_pressed"]
[connection signal="pressed" from="NewCustomWindow/Margin/VBox/ButtonHBox/ConfirmButton" to="." method="_on_new_custom_confirm_button_pressed"]
